# ai-exercise-coach-vision-nlp

./: .gitignore  ARCH.md  Makefile  PLAN.md  PRODUCT_BRIEF.md  README.md  TODO.md  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json
.github/workflows/: ci.yml  deploy.yml  security.yml
apps/backend/: env.example  package.json
apps/backend/src/: app.controller.ts  app.module.ts  app.service.ts  main.ts
apps/backend/src/auth/: auth.controller.ts  auth.service.ts
apps/backend/src/encryption/: kms.service.ts
apps/backend/src/metrics/: metrics.controller.ts  metrics.service.ts
apps/backend/src/programs/: programs.controller.ts  programs.service.ts
apps/backend/src/sessions/: sessions.controller.ts  sessions.service.ts
apps/backend/src/users/: users.controller.ts  users.service.ts
apps/frontend/: package.json
apps/frontend/src/__tests__/: WorkoutSession.test.tsx
apps/frontend/src/app/: layout.tsx  page.tsx
apps/workers/: pyproject.toml  requirements.txt
apps/workers/shared/: __init__.py  config.py  nats_client.py
apps/workers/tests/: test_cue_engine.py  test_exercise_classifier.py
apps/workers/workers/: __init__.py
apps/workers/workers/adaptive/: difficulty_engine.py
apps/workers/workers/coach/: cue_engine.py
apps/workers/workers/exercise/: exercise_classifier.py  main.py
apps/workers/workers/export/: export_service.py  main.py
apps/workers/workers/nlp/: intent_parser.py  main.py
apps/workers/workers/pose/: __init__.py  main.py  pose_detector.py
apps/workers/workers/privacy/: face_blur_service.py
scripts/: init-db.sql  setup-rls.sql
(+24 files in other folders)
